Dualmono broken
Reverse stereo works, but left or right dual-mono has no effects.
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Link issues together to show that they're related.
Learn more.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Rémi Denis-Courmont added Component::Audio: filters Severity::normal Type::bug Version::master git + 1 deleted label
added Component::Audio: filters Severity::normal Type::bug Version::master git + 1 deleted label
- Rémi Denis-Courmont changed milestone to %2.2.0
changed milestone to %2.2.0
- Rémi Denis-Courmont assigned to @Courmisch and unassigned @MigrationBot
assigned to @Courmisch and unassigned @MigrationBot
- Rémi Denis-Courmont added Status::fixed label
added Status::fixed label
- Rémi Denis-Courmont closed
closed
commit d6388f26 Author: Rémi Denis-Courmont remi@remlab.net Date: Sun Nov 2 12:08:56 2014 +0200
trivial_mixer: try to fix dual-mono (fixes [#12673](https://code.videolan.org/videolan/vlc/-/issues/12673)) Original channels is under-specified in my opinion. If you know where the design documentation is, please tell me.
Original author: remi@remlab.net
commit a842bc47 Author: Rémi Denis-Courmont remi@remlab.net Date: Sun Nov 2 11:35:16 2014 +0200
PulseAudio: clobber original channels (refs [#12673](https://code.videolan.org/videolan/vlc/-/issues/12673)) Do like the other outputs do.
Original author: remi@remlab.net
Please register or sign in to reply