PulseAudio: clobber original channels (refs #12673)

Do like the other outputs do.