modules/audio_output/pulse.c
@@ -759,6 +759,7 @@ static int Start(audio_output_t *aout, audio_sample_format_t *restrict fmt)
     }
     if (fmt->i_physical_channels & AOUT_CHAN_LFE)
         map.map[map.channels++] = PA_CHANNEL_POSITION_LFE;
+    fmt->i_original_channels = fmt->i_physical_channels;
 
     for (unsigned i = 0; map.channels < ss.channels; i++) {
         map.map[map.channels++] = PA_CHANNEL_POSITION_AUX0 + i;
